gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: docker-hub
      containers:
        - name: gateway
          image: mindmatrix/gateway:1.0.4
          ports:
            - containerPort: 4111
