gateway/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 4111
      targetPort: 4111
  type: ClusterIP
